Teacher side UI 완료=

--- a/app/views/class/class_room_teacher.html.erb
+++ b/app/views/class/class_room_teacher.html.erb
@@ -248,7 +248,7 @@
                                     
                                         <!--begin::Nav item-->
                                         <li class="nav-item">
-                                            <a class="nav-link text-active-primary me-6" href="../../demo4/dist/teacher_class_homework.html">Homework</a>
+                                            <a class="nav-link text-active-primary me-6" onclick="renderHomework()">Homework</a>
                                         </li>
                                         <!--end::Nav item-->
 
@@ -1741,141 +1741,7 @@
 
                         <!--begin::Table-->
                         <div class=" card card-flush mt-6 mt-xl-9" id="render-partial-tabs">
-                        
-                            <!--begin::Card header-->
-                            <div class=" card-header mt-5">
-                                <!--begin::Card title-->
-                                <div class="card-title flex-column">
-                                    <h3 class="fw-bolder mb-1">Submission of homework </h3>
-                                    <div class="fs-6 text-gray-400">total of 8 weeks of homework.</div>
-                                </div>
-                                <!--begin::Card title-->
-                                <!--begin::Card toolbar-->
-                                <div class="card-toolbar my-1">
-                                    <!--begin::Select-->
-                                    <div class="me-6 my-1">
-                                        <select id="kt_filter_year" name="year" data-control="select2" data-hide-search="true" class="w-125px form-select form-select-solid form-select-sm select2-hidden-accessible" data-select2-id="select2-data-kt_filter_year" tabindex="-1" aria-hidden="true">
-                                            <option value="All" selected="selected" data-select2-id="select2-data-95-khgg">All time</option>
-                                            <option value="thisyear">This year</option>
-                                            <option value="thismonth">This month</option>
-                                            <option value="lastmonth">Last month</option>
-                                            <option value="last90days">Last 90 days</option>
-                                        </select>
-                                    </div>
-                                    <!--end::Select-->
-                                    <!--begin::Select-->
-                                    <div class=" me-4 my-1">
-                                        <select id="kt_filter_orders" name="orders" data-control="select2" data-hide-search="true" class="w-125px form-select form-select-solid form-select-sm select2-hidden-accessible" data-select2-id="select2-data-kt_filter_orders" tabindex="-1" aria-hidden="true">
-                                            <option value="All" selected="selected" data-select2-id="select2-data-97-lfao">All Orders</option>
-                                            <option value="Approved">Approved</option>
-                                            <option value="Declined">Declined</option>
-                                            <option value="In Progress">In Progress</option>
-                                            <option value="In Transit">In Transit</option>
-                                        </select>
-                                    </div>
-                                    <!--end::Select-->
-                                    <!--begin::Search-->
-                                    <div class="d-flex align-items-center position-relative my-1">
-                                        <!--begin::Svg Icon | path: icons/duotune/general/gen021.svg-->
-                                        <span class="svg-icon svg-icon-3 position-absolute ms-3">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                                                <rect opacity="0.5" x="17.0365" y="15.1223" width="8.15546" height="2" rx="1" transform="rotate(45 17.0365 15.1223)" fill="black"></rect>
-                                                <path d="M11 19C6.55556 19 3 15.4444 3 11C3 6.55556 6.55556 3 11 3C15.4444 3 19 6.55556 19 11C19 15.4444 15.4444 19 11 19ZM11 5C7.53333 5 5 7.53333 5 11C5 14.4667 7.53333 17 11 17C14.4667 17 17 14.4667 17 11C17 7.53333 14.4667 5 11 5Z" fill="black"></path>
-                                            </svg>
-                                        </span>
-                                        <!--end::Svg Icon-->
-                                        <input type="text" id="kt_filter_search" class="form-control form-control-solid form-select-sm w-150px ps-9" placeholder="Search Order">
-                                    </div>
-                                    <!--end::Search-->
-                                </div>
-                                <!--begin::Card toolbar-->
-                            </div>
-                            <!--end::Card header-->
-
-                            <!--begin::Card body-->
-                            <div class="card-body pt-0">
-                                <!--begin::Table container-->
-                                <div class="table-responsive">
-                                    <!--begin::Table-->
-                                    <div id="kt_profile_overview_table_wrapper" class="dataTables_wrapper dt-bootstrap4 no-footer"><div class="table-responsive"><table id="kt_profile_overview_table" class="table table-row-bordered table-row-dashed gy-4 align-middle fw-bolder dataTable no-footer">
-                                        <!--begin::Head-->
-                                        <thead class="fs-7 text-gray-400 text-uppercase">
-                                            <tr>
-                                                <th class="min-w-100px sorting" tabindex="0" aria-controls="kt_profile_overview_table" rowspan="1" colspan="1" aria-label="Status: activate to sort column ascending">User</th>
-                                                <th class="min-w-75px sorting" tabindex="0" aria-controls="kt_profile_overview_table" rowspan="1" colspan="1" aria-label="Status: activate to sort column ascending">Week</th>
-                                                <th class="min-w-250px sorting" tabindex="0" aria-controls="kt_profile_overview_table" rowspan="1" colspan="1" aria-label="Manager: activate to sort column ascending" >Book</th>
-                                                <th class="min-w-150px sorting" tabindex="0" aria-controls="kt_profile_overview_table" rowspan="1" colspan="1" aria-label="Date: activate to sort column ascending" >Submission </th>
-                                                <th class="min-w-90px sorting" tabindex="0" aria-controls="kt_profile_overview_table" rowspan="1" colspan="1" aria-label="Amount: activate to sort column ascending" >Confirm</th>
-                                                <th class="min-w-50px text-end sorting" tabindex="0" aria-controls="kt_profile_overview_table" rowspan="1" colspan="1" aria-label="Details: activate to sort column ascending" style="width: 94.4375px;">Details</th></tr>
-                                        </thead>
-                                        <!--end::Head-->
-                                        <!--begin::Body-->
-                                        <tbody class="fs-6">
-                                            
-                                            
-                                            <tr class="odd">
-
-                                                
-                                                <td class="d-flex align-items-center">
-                                                    <!--begin:: Avatar -->
-                                                    <div class="symbol symbol-circle symbol-50px overflow-hidden me-3">
-                                                        <a href="../../demo4/dist/apps/user-management/users/view.html">
-                                                            <div class="symbol-label">
-                                                                <img src="/images/ysmeta/img_student.jpeg" alt="Emma Smith" class="w-100">
-                                                            </div>
-                                                        </a>
-                                                    </div>
-                                                    <!--end::Avatar-->
-                                                    <!--begin::User details-->
-                                                    <div class="d-flex flex-column">
-                                                        <a href="../../demo4/dist/admin_user_users_student.html" class="text-gray-800 text-hover-primary mb-1">Jr Anthony</a>
-                                                    </div>
-                                                    <!--begin::User details-->
-                                                </td>
-                                            
-                                                <td> week 1</td>
-
-                                                <td class="d-flex align-items-center">
-
-                                                    <div class="symbol symbol-50px overflow-hidden me-3">
-                                                        <a href="../../demo4/dist/apps/user-management/users/view.html">
-                                                            <div class="symbol-label">
-                                                                <img src="/images/ysmeta/img_bookcover.jpeg" alt="Sean Bean" class="w-100">
-                                                            </div>
-                                                        </a>
-                                                    </div>
-
-
-                                                    <!--end::Avatar-->
-                                                    <!--begin::User details-->
-                                                    <div class="d-flex flex-column">
-                                                        <a href="../../demo4/dist/admin_school_book_homework.html" class="text-gray-800 text-hover-primary mb-1">Flat Stanley and the Lost Treasure (I Can Read Level 2)</a>
-                                                        <div>
-                                                            <span class="fs-8 ">Jeff brown</span>
-                                                            <span class="fs-9 badge badge-light-warning">Newbery Winner</span>
-                                                            <span class="fs-9 badge badge-light-primary">Animal Friendship</span>
-
-                                                        </div>
-                                                    </div>
-                                                    <!--begin::User details-->
-                                                </td>
-
-                                                <td data-order="2021-11-10T00:00:00+09:00">Nov 10, 2021</td>
-                                                <td data-order="2021-11-10T00:00:00+09:00">In Progress</td>
-                                                <td class="">
-                                                    <a href="#" class="btn btn-sm btn-primary me-3" data-bs-toggle="modal" data-bs-target="#kt_modal_new_target">View</a>
-                                                </td>
-                                            </tr>
-                                    
-
-                                        </tbody>
-                                        <!--end::Body-->
-                                    </table></div><div class="row"><div class="col-sm-12 col-md-5 d-flex align-items-center justify-content-center justify-content-md-start"><div class="dataTables_length" id="kt_profile_overview_table_length"><label><select name="kt_profile_overview_table_length" aria-controls="kt_profile_overview_table" class="form-select form-select-sm form-select-solid"><option value="10">10</option><option value="25">25</option><option value="50">50</option><option value="100">100</option></select></label></div></div><div class="col-sm-12 col-md-7 d-flex align-items-center justify-content-center justify-content-md-end"><div class="dataTables_paginate paging_simple_numbers" id="kt_profile_overview_table_paginate"><ul class="pagination"><li class="paginate_button page-item previous disabled" id="kt_profile_overview_table_previous"><a href="#" aria-controls="kt_profile_overview_table" data-dt-idx="0" tabindex="0" class="page-link"><i class="previous"></i></a></li><li class="paginate_button page-item active"><a href="#" aria-controls="kt_profile_overview_table" data-dt-idx="1" tabindex="0" class="page-link">1</a></li><li class="paginate_button page-item "><a href="#" aria-controls="kt_profile_overview_table" data-dt-idx="2" tabindex="0" class="page-link">2</a></li><li class="paginate_button page-item "><a href="#" aria-controls="kt_profile_overview_table" data-dt-idx="3" tabindex="0" class="page-link">3</a></li><li class="paginate_button page-item next" id="kt_profile_overview_table_next"><a href="#" aria-controls="kt_profile_overview_table" data-dt-idx="4" tabindex="0" class="page-link"><i class="next"></i></a></li></ul></div></div></div></div>
-                                    <!--end::Table-->
-                                </div>
-                                <!--end::Table container-->
-                            </div>
-                            <!--end::Card body-->
+                            <%= render :partial => 'layouts/class-teacher/homework' %>
                         </div>
                         <!--end::Card-->
 
@@ -4708,6 +4574,9 @@
 
 </body>
 <script>
+    function renderHomework(){
+        $("#render-partial-tabs").html("<%= escape_javascript(render :partial => 'layouts/class-teacher/homework') %>");
+    }
     function renderEvaluation(){
         $("#render-partial-tabs").html("<%= escape_javascript(render :partial => 'layouts/class-teacher/evaluation') %>");
     }
