--- a/app/views/layouts/teacher/_transaction.html.erb
+++ b/app/views/layouts/teacher/_transaction.html.erb
@@ -409,9 +409,9 @@
                                                         <label class="d-block fw-bold fs-6 mb-5">Avatar</label>
                                                         <!--end::Label-->
                                                         <!--begin::Image input-->
-                                                        <div class="image-input image-input-outline" data-kt-image-input="true" style="background-image: url(assets/media/avatars/blank.png)">
+                                                        <div class="image-input image-input-outline" data-kt-image-input="true" style="background-image: url(/images/avatars/blank.png)">
                                                             <!--begin::Preview existing avatar-->
-                                                            <div class="image-input-wrapper w-125px h-125px" style="background-image: url(assets/media/avatars/150-1.jpg);"></div>
+                                                            <div class="image-input-wrapper w-125px h-125px" style="background-image: url(/images/avatars/150-1.jpg);"></div>
                                                             <!--end::Preview existing avatar-->
                                                             <!--begin::Label-->
                                                             <label class="btn btn-icon btn-circle btn-active-color-primary w-25px h-25px bg-body shadow" data-kt-image-input-action="change" data-bs-toggle="tooltip" title="" data-bs-original-title="Change avatar">
