--- a/app/views/teacher/mypage.html.erb
+++ b/app/views/teacher/mypage.html.erb
@@ -1,3 +1,8 @@
+<style>
+.nav-item:hover{
+    cursor : pointer;
+}
+</style>
 <!DOCTYPE html>
 <html lang="en">
 	<!--begin::Body-->
@@ -283,19 +288,10 @@
 												<a class="nav-link text-active-primary me-6 " onclick="renderClass()">Class</a>
 											</li>
 											<!--end::Nav item-->
+
 											<!--begin::Nav item-->
 											<li class="nav-item">
 												<a class="nav-link text-active-primary me-6 " onclick="renderClassroom()">Classroom</a>
-											</li>
-											<!--end::Nav item-->
-											<!--begin::Nav item-->
-											<li class="nav-item">
-												<a class="nav-link text-active-primary me-6 " onclick="renderClassTeacher()">Class-Teacher</a>
-											</li>
-											<!--end::Nav item-->
-											<!--begin::Nav item-->
-											<li class="nav-item">
-												<a class="nav-link text-active-primary me-6 " onclick="renderTransaction()">Transaction</a>
 											</li>
 											<!--end::Nav item-->
 
@@ -307,7 +303,25 @@
 
 											<!--begin::Nav item-->
 											<li class="nav-item">
-												<a class="nav-link text-active-primary me-6 " onclick="renderSchedule()">Schedule</a>
+												<a class="nav-link text-active-primary me-6 " onclick="renderTalk()">Talk</a>
+											</li>
+											<!--end::Nav item-->
+
+											<!--begin::Nav item-->
+											<li class="nav-item">
+												<a class="nav-link text-active-primary me-6 " onclick="renderTransaction()">Transaction</a>
+											</li>
+											<!--end::Nav item-->
+
+											<!--begin::Nav item-->
+											<li class="nav-item">
+												<a class="nav-link text-active-primary me-6 " onclick="renderClassTeacher()">Class-Teacher</a>
+											</li>
+											<!--end::Nav item-->											
+
+											<!--begin::Nav item-->
+											<li class="nav-item">
+												<a class="nav-link text-active-primary me-6 " onclick="renderInterviewTeacher()">Interview-Teacher</a>
 											</li>
 											<!--end::Nav item-->
 
@@ -4156,7 +4170,10 @@
     function renderInterview(){
         $("#render-partial-tabs").html("<%= escape_javascript(render :partial => 'layouts/teacher/interview') %>");
     }
-    function renderSchedule(){
-        $("#render-partial-tabs").html("<%= escape_javascript(render :partial => 'layouts/teacher/schedule') %>");
+    function renderTalk(){
+        $("#render-partial-tabs").html("<%= escape_javascript(render :partial => 'layouts/teacher/talk') %>");
+    }
+    function renderInterviewTeacher(){
+        $("#render-partial-tabs").html("<%= escape_javascript(render :partial => 'layouts/teacher/interviewteacher') %>");
     }
 </script>
