--- a/app/views/layouts/teacher/_class.html.erb
+++ b/app/views/layouts/teacher/_class.html.erb
@@ -1,5 +1,5 @@
 <!--begin::Toolbar-->
-<div style="width:90%; margin: 40px auto">
+<div class="tab-pane show fade" id="student_classroom" role="tabpanel">
 
     <div class="d-flex flex-wrap flex-stack mb-6">
         <!--begin::Heading-->
