--- a/app/views/layouts/teacher/_classteacher.html.erb
+++ b/app/views/layouts/teacher/_classteacher.html.erb
@@ -1,5 +1,5 @@
 <%# Schedule 탭 %>
-<div style="width:90%; margin: 40px auto">
+<div class="tab-pane show fade" id="student_classroom" role="tabpanel">
     <div class="bg-primary     mb-5 py-3  ps-3 rounded d-flex justify-content-between align-items-center"> 
         <a onclick="history.back()" class="btn  text-white ">    </a>
         <span class=" text-white">🌈  "✨ Please check the schedule for season 3 from May to August. ✨" </span>
