--- a/app/views/layouts/teacher/_interview.html.erb
+++ b/app/views/layouts/teacher/_interview.html.erb
@@ -1,5 +1,5 @@
 <%# Interview 탭 %>
-<div style="width:90%; margin: 40px auto">
+<div class="tab-pane show fade" id="student_classroom" role="tabpanel">
     <!--begin::Interview-Student -->
     <div class=" mt-15 card card-flush mb-6 mb-xl-9">
 
