--- a/app/views/layouts/teacher/_interviewteacher.html.erb
+++ b/app/views/layouts/teacher/_interviewteacher.html.erb
@@ -1,4 +1,4 @@
-<div style="width:90%; margin: 40px auto">
+<div class="tab-pane show fade" id="student_classroom" role="tabpanel">
     <ul class=" nav nav-custom nav-tabs nav-line-tabs nav-line-tabs-2x border-0 fs-4 fw-bold mb-8">
         <!--begin:::Tab item-->													
 
