--- a/app/views/layouts/teacher/_schedule.html.erb
+++ b/app/views/layouts/teacher/_schedule.html.erb
@@ -1,5 +1,5 @@
 <%# Schedule 탭 %>
-<div style="width:90%; margin: 40px auto">
+<div class="tab-pane show fade" id="student_classroom" role="tabpanel">
     <div class="card">
         <!--begin::Card header-->
         <div class="card-header border-0 pt-6">
