--- a/app/views/layouts/teacher/_transaction.html.erb
+++ b/app/views/layouts/teacher/_transaction.html.erb
@@ -1,5 +1,5 @@
 <%# Transaction 탭 %>
-<div style="width:90%; margin: 40px auto">
+<div class="tab-pane show fade" id="student_classroom" role="tabpanel">
 
         <ul class="nav nav-custom nav-tabs nav-line-tabs nav-line-tabs-2x border-0 fs-4 fw-bold mb-8">
             <li class="nav-item">
