--- a/app/views/teacher/mypage.html.erb
+++ b/app/views/teacher/mypage.html.erb
@@ -334,7 +334,7 @@
 
 
 							<!--begin::Table-->
-							<div class="card card-flush mt-6 mt-xl-9" id="render-partial-tabs">
+							<div class="card-flush mt-6 mt-xl-9" id="render-partial-tabs">
 								<%= render :partial => 'layouts/teacher/class' %>
 							</div>
 							<!--end::Card-->
